<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity">

    <EditText
        android:id="@+id/memo"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadLine" />

    <TextView
        android:id="@+id/txtMemo"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtMemo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeadLine" />

    <EditText
        android:id="@+id/deadLine"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle3" />

    <TextView
        android:id="@+id/txtDeadLine"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtDeadLine"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName3" />

    <EditText
        android:id="@+id/subTitle3"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle2" />

    <TextView
        android:id="@+id/txtName3"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtName3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtName2"
        app:layout_constraintTop_toBottomOf="@+id/txtName2" />

    <EditText
        android:id="@+id/subTitle2"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle1" />

    <TextView
        android:id="@+id/txtName2"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtName2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtName1"
        app:layout_constraintTop_toBottomOf="@+id/txtName1" />

    <EditText
        android:id="@+id/subTitle1"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toDoTitle" />

    <TextView
        android:id="@+id/txtName1"
        android:layout_width="32dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtName1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/newTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/newTxt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newBtnEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnEntry"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnToTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnToTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btnToTop"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/toDoTitle"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years" />

    <Spinner
        android:id="@+id/years"
        android:layout_width="105dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTxt" />

    <Spinner
        android:id="@+id/months"
        android:layout_width="44dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/yearTxt"
        app:layout_constraintTop_toBottomOf="@+id/newTxt" />

    <Spinner
        android:id="@+id/days"
        android:layout_width="44dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/monthTxt"
        app:layout_constraintTop_toBottomOf="@+id/newTxt" />

    <TextView
        android:id="@+id/yearTxt"
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@+id/years"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/monthTxt"
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:text="@string/month"
        app:layout_constraintStart_toEndOf="@+id/months"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/dayTxt"
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:text="@string/day"
        app:layout_constraintStart_toEndOf="@+id/days"
        tools:layout_editor_absoluteY="130dp" />

</androidx.constraintlayout.widget.ConstraintLayout>